# fastabx-paper

./: .gitignore  .pre-commit-config.yaml  README.md  abx_mfcc.py  benchmark_fastabx.py  correlation.py  extract_features.py  gaussians.py  phoneme_vs_speaker.py  pyproject.toml
assets/: abxpy.yml  arpabet_to_ipa.csv  articulatory_features.csv  paper.mplstyle  phoneme_vs_speaker.csv
benchmarks/: .gitignore  benchmark_abxpy.py  benchmark_fastabx.py  benchmark_librilight.py  benchmark_utils.py  features.py  pixi.toml  results-gpu.json  results.json
figures/: abx_mfcc.py  correlation.py  gaussians.py  phoneme_vs_speaker.py
