[project]
name = "fastabx-paper"
version = "1.0.0"
description = "Companion repository to fastabx paper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastabx>=0.4.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "polars>=1.27.1",
    "scipy>=1.15.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "W", "RUF"]