[project]
name = "fastabx-paper"
version = "1.0.0"
description = "Companion repository to fastabx paper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastabx>=0.8.0",
  "h5features>=2.0.0",
  "matplotlib>=3.11.0",
  "numpy>=2.5.0",
  "polars>=1.42.1",
  "psutil>=7.2.2",
  "scipy>=1.18.0",
  "torch>=2.12.1",
  "torchaudio>=2.11.0",
  "torchcodec>=0.14.0",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "W", "RUF"]
